[package]
name = "mydb-bench"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "mydb-bench"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
mysql.workspace = true
serde.workspace = true
serde_json.workspace = true
