[package]
name = "mydb-dump"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "mydbdump"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
mysql.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
zstd.workspace = true
