[package]
name = "mydb-migrate"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "mydb-migrate"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
mysql.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
sha2.workspace = true
