[package]
name = "mydb-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "mydb-server"
path = "src/main.rs"

[dependencies]
mydb-wire = { path = "../mydb-wire" }
mydb-config = { path = "../mydb-config" }
mydb-storage = { path = "../mydb-storage" }
mydb-wal = { path = "../mydb-wal" }
mydb-transaction = { path = "../mydb-transaction" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
clap.workspace = true
arc-swap.workspace = true
parking_lot.workspace = true
dirs.workspace = true
axum.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
tokio-rustls.workspace = true
rustls-pemfile.workspace = true

[dev-dependencies]
tempfile.workspace = true
