[package]
name = "mydb-storage"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mydb-wal = { path = "../mydb-wal" }
tokio.workspace = true
bytes.workspace = true
byteorder.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
parking_lot.workspace = true
dashmap.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
chrono.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
