[package]
name = "mydb-storage"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mydb-wal = { path = "../mydb-wal" }
tokio.workspace = true
byteorder.workspace = true
anyhow.workspace = true
tracing.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
chrono.workspace = true
bincode.workspace = true
rust_decimal.workspace = true

[dev-dependencies]
tempfile.workspace = true
