[package]
name = "mydb-wire"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
bytes.workspace = true
byteorder.workspace = true
sha2.workspace = true
rand.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
parking_lot.workspace = true
bitflags = "2"
