[package]
name = "mydb-wire"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mydb-storage = { path = "../mydb-storage" }
tokio.workspace = true
bytes.workspace = true
byteorder.workspace = true
sha2.workspace = true
rand.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
parking_lot.workspace = true
bitflags = "2"
async-trait.workspace = true
opensrv-mysql.workspace = true
sha1.workspace = true
serde_json.workspace = true
serde.workspace = true
encoding_rs.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
base64.workspace = true
uuid.workspace = true
md5.workspace = true
crc32fast.workspace = true
regex.workspace = true
tokio-rustls.workspace = true

[dev-dependencies]
tempfile.workspace = true
mysql.workspace = true
